Switch to displaying time in milliseconds. enable all the JVM things.